# dveri

./: .dockerignore  .env  .gitignore  ASYNC_PARALLEL_REQUEST_FIX.md  AUTOMATIC_OPTIMIZATIONS_GUIDE.md  BATCH_EXECUTION_FIX.md  DB_SELECTION_FOR_REPORTS_IMPLEMENTATION.md  FERAGAT_FORMU_WIDGET.md  FERAGAT_TEST_GUIDE.md  GLOBAL_FILTERS_IMPLEMENTATION_COMPLETE.md  LOADING_SKELETON_IMPLEMENTATION.md  ODBC_OFFLINE_INSTALL.md  ODBC_QUICK_START.md  PERFORMANCE_OPTIMIZATIONS.md  PERSONEL_UPDATE_README.md  QR_CODE_COMPRESSION_IMPLEMENTATION.md  README_populate_script.md  REQUEST_STALLING_FIX.md  TEZGAH_IMPORT_README.md  USE_REPORT_DB_CONFIG_IMPLEMENTATION.md  check_table_structure.sql  clickhouse.sql  create_analytics_table.py  databasefill.sql  docker-compose.yml  download_odbc_packages.sh  insert_onay_attributes.sql  populate_clickhouse_focused.py  populate_clickhouse_tables.py  populate_requirements.txt  rebuild_backend.sh  sample_data.sql  sample_queries_with_date_filters.sql  test_feragat_data.sql
dtbackend/: .dockerignore  .env  ARCHITECTURE_DIAGRAM.md  ASELSAN_KAYNAKLI_DURMA_IMPLEMENTATION.md  BUGFIX_ASELSAN_DURMA_NOT_WRITING.md  BUGFIX_LATEST_WEEK_CHECK_BOTH_TABLES.md  CHANGE_TO_DURUS_RECORDS.md  CLEANUP_REMOVED_DURMA_FROM_SCHEDULER.md  CSUITE_IVME_DATABASE_MIGRATION.md  CSUITE_MES_INTEGRATION.md  DATABASE_SETUP_GUIDE.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  Dockerfile.offline  Dockerfile.online  FEATURE_KABLAJ_DATA_STORAGE.md  IMPLEMENTATION_SUMMARY.md  LOGIN_TRACKING_IMPLEMENTATION.md  MULTIPLE_DATABASES_ALEMBIC.md  MULTI_PLATFORM_IMPLEMENTATION_STATUS.md  Makefile  PLATFORM_API_DOCUMENTATION.md  PLATFORM_CONTEXT_FIX.md  PLATFORM_DATABASE_CONFIG.md  PLATFORM_MIDDLEWARE_USAGE.md  README.md  REPORTS_MULTI_DB_SUPPORT.md  REPORTS_MULTI_DB_USAGE_EXAMPLE.md  SQL_QUICK_REFERENCE.md  TALASLI_IMALAT_DATABASE_STORAGE.md  alembic.ini  alembic_romiot.ini  check_ivme_config.py  create_migration.py  env.example  main.py  manage_migrations.py  package-lock.json  pyproject.toml  requirements.txt  (+21 more)
dtbackend/ServiceChecker/: .dockerignore  .env.example  Dockerfile  config.py  docker-compose.yml  requirements.txt  run.py
dtbackend/alembic/: env.py
dtbackend/alembic_romiot/: env.py
dtbackend/data/: csuite_weekly_history.example.json
dtbackend/scripts/: README.md  __init__.py  backfill_analytics_department.py  backfill_user_companies.py  copy_report.py  (+2 more)
(+559 files in other folders)
